Fix: home page title wasn't center aligned correctly

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -33,6 +33,8 @@
     margin-top: 0px;
     margin-bottom: 32px;
 
+    padding: 0px;
+
     border-radius: 12px;
   }
 
